tests/baselines/reference/internalAliasClassInsideLocalModuleWithoutExport.errors.txt
internalAliasClassInsideLocalModuleWithoutExport.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasClassInsideLocalModuleWithoutExport.ts(9,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasClassInsideLocalModuleWithoutExport.ts(10,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== internalAliasClassInsideLocalModuleWithoutExport.ts (3 errors) ====
    export module x {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c {
            foo(a: number) {
                return a;
            }
        }
    }
    
    export module m2 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module m3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            import c = x.c;
            export var cProp = new c();
            var cReturnVal = cProp.foo(10);
        }
    }